<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="people">For how many people do you buy products?</string>
    <string name="days">For how many days?</string>
    <string name="market">Choose market</string>
    <string name="app_name">CaloriePlanner</string>
    <string name="next">შემდეგ</string>
    <string name="day1">დღე I</string>
    <string name="day2">დღე II</string>
    <string name="day3">დღე III</string>
    <string name="plus">adding new tabs</string>
    <string name="protein">ცილა</string>
    <string name="carb">ნახშირწყლები</string>
    <string name="fat">ცხიმი</string>
    <string name="calories">კალორია</string>
    <string name="constraint">შეზღუდვა</string>
    <string name="AddProducts">პროდუქტის დამატება</string>
    <string name="calorieExplanation">თქვენთვის საჭირო კალორიებისა და შემადგენლობის გასარკვევად უნდა ისარგებლოთ ამ კალკულატორით</string>
    <string name="weight">წონა</string>
    <string name="lbs">lbs</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="preference_file_key">home.gio.calorieplanner</string>
    <string name="main">მთავარი</string>
    <string-array name="markets_array">
        <item>გუდვილი</item>
        <item>ნიკორა</item>
        <item>ფუდმარტი</item>
        <item>სპარი</item>
        <item>ნუგეში</item>
    </string-array>
    <string-array name="navigation_array">
        <item>Calculate my calories</item>
    </string-array>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="calculator">კალკულატორი</string>
    <string name="sex">სქესი</string>
    <string name="height">სიმაღლე</string>
    <string name="lifestyle">ცხოვრების წესი</string>
    <string name="goal">მიზანი</string>
    <string name="calculate">გამოთვალე</string>
    <string name="metrics">ერთეული</string>
    <string name="inches">inches</string>
    <string name="age">ასაკი</string>
    <string name="name_of_person">სახელი</string>
    <string name="save_in_list">შენახვა</string>
    <string name="go_to_shopping_list">საყიდლების სიაზე გადასვლა</string>
    <string name="deleting_people">ხალხის წაშლა</string>
    <string name="name">სახელი</string>
    <string name="persons_list">ხალხის სია</string>
    <string name="kg">კგ</string>
    <string name="cm">სმ</string>
    <string name="permission_write_external_rationale">მონაცემების სერვერიდან გადმოსაწერად საჭიროა წვდომა შიდა მეხსიერებასთან</string>
    <string name="permission_internet_rationale">სერვერზე წვდომისათვის საჭიროა ინტერნეტი</string>
    <string name="ok">OK</string>
    <string name="search">ძებნა</string>
    <string name="filter">ფილტრი</string>
    <string name="menu">მენიუ</string>
    <string name="products">პროდუქტები</string>
    <string name="clear">არჩეულის გასუფთავება</string>
    <string name="choose">პროდუქტის არჩევა</string>
    <string name="save_and_return">შენახვა &amp; დაბრუნება</string>
    <string name="total_price">საერთო ფასი:</string>
    <string name="currency">საერთო ფასი: %1$s ლარი</string>
    <string name="shopping_list">საყიდლების სია</string>
    <string name="remove">წაშლა</string>
    <string name="start_shopping">Start shopping</string>
    <string name="create_nutritional_plan">პირადი საყიდლები</string>
    <string name="add_or_remove">+/-</string>
    <string name="minus">minus</string>
    <string name="clear_all">სიის გასუფთავება</string>
</resources>