<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="home.gio.calorieplanner.view.ObjectFragment"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/protein"
        android:layout_weight="3"
        android:gravity="center"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_weight="2"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/carb"
        android:layout_weight="2"
        android:gravity="center"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_weight="2"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fat"
        android:layout_weight="1"
        android:gravity="center"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_weight="2"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:layout_weight="3"
        android:gravity="center"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_weight="3"
        />
</LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/constraint"
        android:layout_weight="1"
        android:gravity="center"
        />
    <Spinner
        android:id="@+id/contraintSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/suggest"
        android:layout_weight="1"
        />
</LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>