<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="home.gio.calorieplanner.ui.fragments.ShoppingListFragment">

    <LinearLayout
        android:id="@+id/title_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recycler_shopping_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_linear">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/full_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/full_list_recycler_height" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/last_textViews_linear_height"
        android:layout_below="@+id/recycler_shopping_list"
        android:orientation="horizontal">


        <Button
            android:id="@+id/clear_all_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/clear_all" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/price_textView_margin_left"
            android:layout_marginStart="@dimen/price_textView_margin_start"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/total_price"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clear_shopping_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/clear_button_margin_end"
            android:layout_marginRight="@dimen/clear_button_margin_right"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/remove" />
    </LinearLayout>

</RelativeLayout>
